# deskmanager

./: configure.ac  deskmanager.geany
src/: Application.vala  MainWindow.vala  Makefile.am
src/Side/: BasePane.vala  FindPane.vala
src/Views/: BaseView.vala  SearchResults.vala  SearchView.vala  SimpleFolderView.vala  TerminalView.vala
src/misc/: libfm-sample-wnd.vala
